Change .gitignore to remove data folder

--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,5 @@ tags
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
-data/raw
-data/*.json
+data/
 .idea
