--- a/2-elasticsearch/docker-compose.yml
+++ b/2-elasticsearch/docker-compose.yml
@@ -9,15 +9,16 @@ services:
     image: elasticsearch:latest
     restart: unless-stopped
     ports:
-      - 9200:9200
+      - 23489:9200
     volumes:
       - elasticsearch:/usr/share/elasticsearch/data
-
+      - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+  
   kibana:
     image: kibana:latest
     restart: unless-stopped
     ports:
-      - 5601:5601
+      - 23488:5601
     depends_on:
       - elasticsearch
 
